<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="429dp"
        android:layout_height="631dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="335dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button26"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/alex"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button25"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/anna"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/bob"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/dan"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/dilan"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/frank"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button23"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/ivan"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button24"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/jayden"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button21"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/kira"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button22"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:text="@string/viktoriya"
                android:textColor="@color/black" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>